관광지 목록 조회 url parameter 변경

--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -458,9 +458,9 @@
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
                         cat3: $('input[name=cat3]:checked').val(),
-                        areaCode: $('input[name=area]:checked').val(),
-                        sigunguCode: $('input[name=sigungu]:checked').val(),
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
+                        sigungu: $('input[name=sigungu]:checked').val(),
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -482,9 +482,9 @@
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
                         cat3: $('input[name=cat3]:checked').val(),
-                        areaCode: $('input[name=area]:checked').val(),
-                        sigunguCode: $('input[name=sigungu]:checked').val(),
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
+                        sigungu: $('input[name=sigungu]:checked').val(),
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -517,9 +517,9 @@
                             cat1 : $('input[name=cat1]:checked').val(),
                             cat2 : $('input[name=cat2]:checked').val(),
                             cat3 : $('input[name=cat3]:checked').val(),
-                            areaCode : $('input[name=area]:checked').val(),
-                            sigunguCode : $('input[name=sigungu]:checked').val(),
-                            contentTypeId : $('input[name=type]:checked').val(),
+                            area : $('input[name=area]:checked').val(),
+                            sigungu : $('input[name=sigungu]:checked').val(),
+                            type : $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success : function(data){
@@ -551,9 +551,9 @@
                             cat1: $('input[name=cat1]:checked').val(),
                             cat2: $('input[name=cat2]:checked').val(),
                             cat3: $('input[name=cat3]:checked').val(),
-                            areaCode: $('input[name=area]:checked').val(),
-                            sigunguCode: $('input[name=sigungu]:checked').val(),
-                            contentTypeId: $('input[name=type]:checked').val(),
+                            area: $('input[name=area]:checked').val(),
+                            sigungu: $('input[name=sigungu]:checked').val(),
+                            type: $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success: function (data) {
@@ -590,7 +590,7 @@
                 contentType : 'application/json; charset=UTF-8',
                 data: {
                     page: 0,
-                    areaCode: areaCode,
+                    area: areaCode,
                     keyword: keyword
                 },
                 success: function(data) {
@@ -617,7 +617,7 @@
                 contentType : 'application/json; charset=UTF-8',
                 data : {
                     page : 0,
-                    areaCode : $('input[name=area]:checked').val(),
+                    area : $('input[name=area]:checked').val(),
                     cat1 : cat1,
                     keyword : keyword
                 },
@@ -643,7 +643,7 @@
                 contentType: 'application/json; charset=UTF-8',
                 data: {
                     page: 0,
-                    areaCode: $('input[name=area]:checked').val(),
+                    area: $('input[name=area]:checked').val(),
                     cat1: cat1,
                     cat2: cat2,
                     keyword: keyword
@@ -689,9 +689,9 @@
                         cat1: cat1,
                         cat2: cat2,
                         cat3: cat3,
-                        areaCode: areaCode,
-                        sigunguCode: sigunguCode,
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: areaCode,
+                        sigungu: sigunguCode,
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -715,9 +715,9 @@
                         cat1: cat1,
                         cat2: cat2,
                         cat3: cat3,
-                        areaCode: areaCode,
-                        sigunguCode: sigunguCode,
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: areaCode,
+                        sigungu: sigunguCode,
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
