--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -456,9 +456,9 @@
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
                         cat3: $('input[name=cat3]:checked').val(),
-                        areaCode: $('input[name=area]:checked').val(),
-                        sigunguCode: $('input[name=sigungu]:checked').val(),
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
+                        sigungu: $('input[name=sigungu]:checked').val(),
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -480,9 +480,9 @@
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
                         cat3: $('input[name=cat3]:checked').val(),
-                        areaCode: $('input[name=area]:checked').val(),
-                        sigunguCode: $('input[name=sigungu]:checked').val(),
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
+                        sigungu: $('input[name=sigungu]:checked').val(),
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -515,9 +515,9 @@
                             cat1 : $('input[name=cat1]:checked').val(),
                             cat2 : $('input[name=cat2]:checked').val(),
                             cat3 : $('input[name=cat3]:checked').val(),
-                            areaCode : $('input[name=area]:checked').val(),
-                            sigunguCode : $('input[name=sigungu]:checked').val(),
-                            contentTypeId : $('input[name=type]:checked').val(),
+                            area : $('input[name=area]:checked').val(),
+                            sigungu : $('input[name=sigungu]:checked').val(),
+                            type : $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success : function(data){
@@ -549,9 +549,9 @@
                             cat1: $('input[name=cat1]:checked').val(),
                             cat2: $('input[name=cat2]:checked').val(),
                             cat3: $('input[name=cat3]:checked').val(),
-                            areaCode: $('input[name=area]:checked').val(),
-                            sigunguCode: $('input[name=sigungu]:checked').val(),
-                            contentTypeId: $('input[name=type]:checked').val(),
+                            area: $('input[name=area]:checked').val(),
+                            sigungu: $('input[name=sigungu]:checked').val(),
+                            type: $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success: function (data) {
@@ -589,7 +589,7 @@
                     contentType : 'application/json; charset=UTF-8',
                     data: {
                         page: 0,
-                        areaCode: areaCode,
+                        area: areaCode,
                         keyword: keyword
                     },
                     success: function(data) {
@@ -610,7 +610,7 @@
                     data : {
                         userId : [[${userId}]],
                         page : 0,
-                        areaCode : areaCode,
+                        area : areaCode,
                         keyword: keyword
                     },
                     success : function(data){
@@ -638,7 +638,7 @@
                     contentType : 'application/json; charset=UTF-8',
                     data : {
                         page : 0,
-                        areaCode : $('input[name=area]:checked').val(),
+                        area : $('input[name=area]:checked').val(),
                         cat1 : cat1,
                         keyword : keyword
                     },
@@ -660,7 +660,7 @@
                         userId : [[${userId}]],
                         page : 0,
                         cat1 : cat1,
-                        areaCode : $('input[name=area]:checked').val(),
+                        area : $('input[name=area]:checked').val(),
                         keyword: keyword
                     },
                     success : function(data){
@@ -686,7 +686,7 @@
                     contentType: 'application/json; charset=UTF-8',
                     data: {
                         page: 0,
-                        areaCode: $('input[name=area]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
                         cat1: cat1,
                         cat2: cat2,
                         keyword: keyword
@@ -708,7 +708,7 @@
                     data: JSON.stringify({
                         userId : [[${userId}]],
                         page: 0,
-                        areaCode: $('input[name=area]:checked').val(),
+                        area: $('input[name=area]:checked').val(),
                         cat1: cat1,
                         cat2: cat2,
                         keyword: keyword
@@ -755,9 +755,9 @@
                         cat1: cat1,
                         cat2: cat2,
                         cat3: cat3,
-                        areaCode: areaCode,
-                        sigunguCode: sigunguCode,
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: areaCode,
+                        sigungu: sigunguCode,
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -781,9 +781,9 @@
                         cat1: cat1,
                         cat2: cat2,
                         cat3: cat3,
-                        areaCode: areaCode,
-                        sigunguCode: sigunguCode,
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: areaCode,
+                        sigungu: sigunguCode,
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
