--- a/src/main/resources/templates/tourinfo/city.html
+++ b/src/main/resources/templates/tourinfo/city.html
@@ -55,9 +55,9 @@
                             cat1: $('input[name=cat1]:checked').val(),
                             cat2: $('input[name=cat2]:checked').val(),
                             cat3: $('input[name=cat3]:checked').val(),
-                            areaCode: $('input[name=area]').val(),
-                            sigunguCode: $('input[name=sigungu]:checked').val(),
-                            contentTypeId: $('input[name=type]:checked').val(),
+                            area: $('input[name=area]').val(),
+                            sigungu: $('input[name=sigungu]:checked').val(),
+                            type: $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success: function (data) {
@@ -86,9 +86,9 @@
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
                         cat3: $('input[name=cat3]:checked').val(),
-                        areaCode: $('input[name=area]').val(),
-                        sigunguCode: $('input[name=sigungu]:checked').val(),
-                        contentTypeId: $('input[name=type]:checked').val(),
+                        area: $('input[name=area]').val(),
+                        sigungu: $('input[name=sigungu]:checked').val(),
+                        type: $('input[name=type]:checked').val(),
                         keyword: keyword
                     },
                     success: function (data) {
@@ -114,9 +114,9 @@
                             cat1: $('input[name=cat1]:checked').val(),
                             cat2: $('input[name=cat2]:checked').val(),
                             cat3: $('input[name=cat3]:checked').val(),
-                            areaCode: $('input[name=area]').val(),
-                            sigunguCode: $('input[name=sigungu]:checked').val(),
-                            contentTypeId: $('input[name=type]:checked').val(),
+                            area: $('input[name=area]').val(),
+                            sigungu: $('input[name=sigungu]:checked').val(),
+                            type: $('input[name=type]:checked').val(),
                             keyword: keyword
                         },
                         success: function (data) {
@@ -234,9 +234,9 @@
                     cat1: searchInfo.cat1,
                     cat2: searchInfo.cat2,
                     cat3: searchInfo.cat3,
-                    areaCode: searchInfo.area,
-                    sigunguCode: searchInfo.sigungu,
-                    contentTypeId: searchInfo.type,
+                    area: searchInfo.area,
+                    sigungu: searchInfo.sigungu,
+                    type: searchInfo.type,
                     keyword: searchInfo.keyword
                 },
                 success: function (data) {
