관광지 하위 분류 오류 수정

--- a/src/main/resources/templates/plan/plan.html
+++ b/src/main/resources/templates/plan/plan.html
@@ -598,6 +598,9 @@
                     },
                     error: function(err) {
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].sigunguSelect[value=""]').prop("checked", true);
                     }
                 })
             }
@@ -618,6 +621,9 @@
                     },
                     error : function (err){
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].sigunguSelect[value=""]').prop("checked", true);
                     }
                 })
             }
@@ -647,6 +653,9 @@
                     },
                     error : function (err){
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].cat2Select[value=""]').prop("checked", true);
                     }
                 })
             }
@@ -668,6 +677,9 @@
                     },
                     error : function (err){
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].cat2Select[value=""]').prop("checked", true);
                     }
                 })
             }
@@ -696,6 +708,9 @@
                     },
                     error: function (err) {
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].cat3Select[value=""]').prop("checked", true);
                     }
                 })
             }
@@ -718,6 +733,9 @@
                     },
                     error: function (err) {
                         console.log(err)
+                    },
+                    beforeSend: function (){
+                        $('input[type="radio"].cat2Select[value=""]').prop("checked", true);
                     }
                 })
             }
