--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -599,6 +599,9 @@
                 },
                 error: function(err) {
                     console.log(err)
+                },
+                beforeSend: function (){
+                    $('input[type="radio"].sigunguSelect[value=""]').prop("checked", true);
                 }
             })
         })
@@ -626,6 +629,9 @@
                 },
                 error : function (err){
                     console.log(err)
+                },
+                beforeSend: function (){
+                    $('input[type="radio"].cat2Select[value=""]').prop("checked", true);
                 }
             })
         })
@@ -653,6 +659,9 @@
                 },
                 error: function (err) {
                     console.log(err)
+                },
+                beforeSend: function (){
+                    $('input[type="radio"].cat3Select[value=""]').prop("checked", true);
                 }
             })
         })
