--- a/src/main/resources/templates/plan/edit.html
+++ b/src/main/resources/templates/plan/edit.html
@@ -232,10 +232,11 @@
 
 <script src="https://apis.openapi.sk.com/tmap/jsv2?version=1&appKey=aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf"></script>
 <script th:inline="javascript">
-    let plannerId = [[${plannerId}]];
+    // 플래너의 ID
+    let plannerId = [[${planner.plannerId}]];
 
     // 날짜
-    let days = [[${daysBetween}]];
+    let days = [[${planner.daysBetween}]];
 
     // 인덱스
     let index;
@@ -282,9 +283,9 @@
     const appKey = "aDVWgep9DE8rL7yokAybK6jrQIiAk9Ln9jI9CTyf";
 
     // 일정 정보
-    let plannerName = [[${plannerName}]];
-    let startDate = [[${startDate}]];
-    let endDate = [[${endDate}]];
+    let plannerName = [[${planner.plannerName}]];
+    let startDate = [[${planner.startDate}]];
+    let endDate = [[${planner.endDate}]];
 
 
     /**
@@ -432,7 +433,7 @@
             contentType: 'application/json; charset=UTF-8',
             data: {
                 page: 0,
-                userId: [[${userId}]],
+                userId: [[${loginId}]],
             },
             success: function (data) {
                 $('#touritems').replaceWith(data);
@@ -477,7 +478,7 @@
                     type: 'GET',
                     contentType: 'application/json; charset=UTF-8',
                     data: {
-                        userId: [[${userId}]],
+                        userId: [[${loginId}]],
                         page: 0,
                         cat1: $('input[name=cat1]:checked').val(),
                         cat2: $('input[name=cat2]:checked').val(),
@@ -546,7 +547,7 @@
                         type: 'GET',
                         contentType: 'application/json; charset=UTF-8',
                         data: {
-                            userId: [[${userId}]],
+                            userId: [[${loginId}]],
                             page: target.getAttribute('data-num'),
                             cat1: $('input[name=cat1]:checked').val(),
                             cat2: $('input[name=cat2]:checked').val(),
@@ -587,11 +588,8 @@
             $.ajax({
                 url: '/api/planner/sigungu',
                 type: 'GET',
-                contentType : 'application/json; charset=UTF-8',
                 data: {
-                    page: 0,
-                    area: areaCode,
-                    keyword: keyword
+                    area: areaCode
                 },
                 success: function(data) {
                     //$("html").scrollTop(0);
@@ -617,12 +615,8 @@
             $.ajax({
                 url : '/api/planner/cat2',
                 type: 'GET',
-                contentType : 'application/json; charset=UTF-8',
                 data : {
-                    page : 0,
-                    area : $('input[name=area]:checked').val(),
-                    cat1 : cat1,
-                    keyword : keyword
+                    cat1 : cat1
                 },
                 success : function(data){
                     $('#category-middle').replaceWith(data);
@@ -646,13 +640,8 @@
             $.ajax({
                 url: '/api/planner/cat3',
                 type: 'GET',
-                contentType: 'application/json; charset=UTF-8',
                 data: {
-                    page: 0,
-                    area: $('input[name=area]:checked').val(),
-                    cat1: cat1,
-                    cat2: cat2,
-                    keyword: keyword
+                    cat2: cat2
                 },
                 success: function (data) {
                     $('#category-row').replaceWith(data);
@@ -719,7 +708,7 @@
                     type: 'GET',
                     contentType: 'application/json; charset=UTF-8',
                     data: {
-                        userId : [[${userId}]],
+                        userId : [[${loginId}]],
                         page: 0,
                         cat1: cat1,
                         cat2: cat2,
@@ -780,10 +769,6 @@
         $.ajax({
             type: "GET",
             url: "/api/planner/" + plannerId,
-            contentType: 'application/json; charset=UTF-8',
-            data: {
-                "plannerId": plannerId
-            },
             success: function (response) {
                 // 응답으로 받은 계획을 표시
                 insertPlaces(response);
@@ -1477,9 +1462,9 @@
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
 
                 <!-- 반복하여 탭 생성 -->
-                <th:block th:each="dayNumber : ${dayNumbers}">
+                <th:block th:each="i : ${#numbers.sequence(1, planner.daysBetween)}">
                     <li class="nav-item" role="presentation">
-                        <a href="#" class="day-nav nav-link py-3 border-bottom" aria-current="page"  title="" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Day" th:text="${'Day ' + dayNumber}">
+                        <a href="#" class="day-nav nav-link py-3 border-bottom" aria-current="page" th:data-day="${i}" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Day" th:text="'Day ' + ${i}">
                         </a>
                     </li>
                 </th:block>
