검색, 이미지 조회 api 수정

--- a/src/main/resources/templates/review/review.html
+++ b/src/main/resources/templates/review/review.html
@@ -1005,7 +1005,7 @@
             url : '/api/reviews/me/recommend',
             type : 'GET',
             data : {
-                fromDate : fromDate,
+                fromdate : fromDate,
                 page : scrollPage
             },
             async: false,
@@ -1115,7 +1115,7 @@
             url : '/api/reviews/me/follow',
             type : 'GET',
             data : {
-                fromDate : fromDate,
+                fromdate : fromDate,
                 page : scrollPage
             },
             async: false,
