--- a/src/main/resources/templates/search/search.html
+++ b/src/main/resources/templates/search/search.html
@@ -569,7 +569,7 @@
             url : '/api/search/review/recommend',
             type : 'GET',
             data : {
-                fromDate : fromDate,
+                fromdate : fromDate,
                 keyword : keyword,
                 page : scrollPage
             },
@@ -681,7 +681,7 @@
             url : '/api/search/review/recent',
             type : 'GET',
             data : {
-                fromDate : fromDate,
+                fromdate : fromDate,
                 keyword : keyword,
                 page : scrollPage
             },
