--- a/src/main/resources/templates/review/reviewbook.html
+++ b/src/main/resources/templates/review/reviewbook.html
@@ -498,7 +498,7 @@
             <div class="modal-content">
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="bookEditorLabel">리뷰북 생성</h1>
+                    <h1 class="modal-title fs-5" id="bookEditorLabel">리뷰북 수정</h1>
                 </div>
                 <div class="modal-body">
                     <div id="edit-book-cover-wrap" class="d-flex align-items-center justify-content-center mb-3">
